[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/PlayerMech.png" type="Texture" id=1]
[ext_resource path="res://Scripts/LaserSphereSignal.gd" type="Script" id=2]
[ext_resource path="res://Sprites/RadialLight.png" type="Texture" id=3]
[ext_resource path="res://addons/smoothing/smoothing_2d.gd" type="Script" id=4]
[ext_resource path="res://Sprites/HP_Bar_port_empty.png" type="Texture" id=5]
[ext_resource path="res://Sprites/HP_Bar_port_full.png" type="Texture" id=6]
[ext_resource path="res://Scripts/LaserSphere.gd" type="Script" id=7]
[ext_resource path="res://Objects/ExplosionEffect.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sprites/LaserBaem.png" type="Texture" id=9]
[ext_resource path="res://UnsadedCanvas.tres" type="Material" id=10]
[ext_resource path="res://Sprites/LaserParticle.png" type="Texture" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[node name="LaserSphere" type="Node2D"]
script = ExtResource( 2 )

[node name="LaserSphere" type="KinematicBody2D" parent="." groups=[
"minimap",
]]
collision_layer = 2
collision_mask = 7
script = ExtResource( 7 )
explosion_effect = ExtResource( 8 )

[node name="Timer" type="Timer" parent="LaserSphere"]
process_mode = 0
wait_time = 10.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="LaserSphere"]
shape = SubResource( 1 )

[node name="AttackTimer" type="Timer" parent="LaserSphere"]
wait_time = 0.05
one_shot = true

[node name="LeftBeam" type="RayCast2D" parent="LaserSphere"]
rotation = 1.5708
cast_to = Vector2( 0, 10000 )
collision_mask = 9

[node name="RightBeam" type="RayCast2D" parent="LaserSphere"]
rotation = -1.5708
cast_to = Vector2( 0, 10000 )
collision_mask = 9

[node name="UpBeam" type="RayCast2D" parent="LaserSphere"]
rotation = 3.14159
cast_to = Vector2( 0, 10000 )
collision_mask = 9

[node name="DownBeam" type="RayCast2D" parent="LaserSphere"]
cast_to = Vector2( 0, 10000 )
collision_mask = 9

[node name="HealthBar" type="Node2D" parent="."]
z_index = 100

[node name="HealthBar" type="TextureProgress" parent="HealthBar"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_left = -47.0
margin_top = -50.0
margin_right = 141.0
margin_bottom = -10.0
rect_scale = Vector2( 0.5, 0.5 )
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Smoothing2D" type="Node2D" parent="."]
script = ExtResource( 4 )
target = NodePath("../LaserSphere")
flags = 55

[node name="Sprite" type="Sprite" parent="Smoothing2D"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 80, 464, 32, 32 )

[node name="Light2D" type="Light2D" parent="Smoothing2D"]
texture = ExtResource( 3 )
color = Color( 0.211765, 0.00784314, 0.0509804, 1 )
energy = 2.0
shadow_buffer_size = 256

[node name="LeftBeam" type="Sprite" parent="Smoothing2D"]
show_behind_parent = true
material = ExtResource( 10 )
rotation = 3.14159
scale = Vector2( 1, 2 )
texture = ExtResource( 9 )
centered = false
offset = Vector2( 0, -5 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 10 )

[node name="End" type="Position2D" parent="Smoothing2D/LeftBeam"]

[node name="CPUParticles2D" type="CPUParticles2D" parent="Smoothing2D/LeftBeam/End"]
show_behind_parent = true
material = SubResource( 2 )
amount = 4
lifetime = 0.2
speed_scale = 2.0
randomness = 1.0
lifetime_randomness = 1.0
texture = ExtResource( 11 )
flag_align_y = true
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 15.0
initial_velocity_random = 1.0
angular_velocity = 20.0
angular_velocity_random = 1.0
orbit_velocity = 1.0
orbit_velocity_random = 1.0
linear_accel = 20.0
linear_accel_random = 1.0
radial_accel = 50.0
radial_accel_random = 1.0
tangential_accel = 10.0
tangential_accel_random = 1.0
damping = 50.0
damping_random = 1.0
scale_amount = 0.7
color = Color( 1, 1, 1, 0.501961 )
anim_speed = 128.0

[node name="RightBeam" type="Sprite" parent="Smoothing2D"]
show_behind_parent = true
material = ExtResource( 10 )
scale = Vector2( 1, 2 )
texture = ExtResource( 9 )
centered = false
offset = Vector2( 0, -5 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 10 )

[node name="End" type="Position2D" parent="Smoothing2D/RightBeam"]

[node name="CPUParticles2D" type="CPUParticles2D" parent="Smoothing2D/RightBeam/End"]
show_behind_parent = true
material = SubResource( 2 )
rotation = 3.14159
amount = 4
lifetime = 0.2
speed_scale = 2.0
randomness = 1.0
lifetime_randomness = 1.0
texture = ExtResource( 11 )
flag_align_y = true
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 15.0
initial_velocity_random = 1.0
angular_velocity = 20.0
angular_velocity_random = 1.0
orbit_velocity = 1.0
orbit_velocity_random = 1.0
linear_accel = 20.0
linear_accel_random = 1.0
radial_accel = 50.0
radial_accel_random = 1.0
tangential_accel = 10.0
tangential_accel_random = 1.0
damping = 50.0
damping_random = 1.0
scale_amount = 0.7
color = Color( 1, 1, 1, 0.501961 )
anim_speed = 128.0

[node name="UpBeam" type="Sprite" parent="Smoothing2D"]
show_behind_parent = true
material = ExtResource( 10 )
rotation = -1.5708
scale = Vector2( 1, 2 )
texture = ExtResource( 9 )
centered = false
offset = Vector2( 0, -5 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 10 )

[node name="End" type="Position2D" parent="Smoothing2D/UpBeam"]

[node name="CPUParticles2D" type="CPUParticles2D" parent="Smoothing2D/UpBeam/End"]
show_behind_parent = true
material = SubResource( 2 )
rotation = -1.5708
amount = 4
lifetime = 0.2
speed_scale = 2.0
randomness = 1.0
lifetime_randomness = 1.0
texture = ExtResource( 11 )
flag_align_y = true
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 15.0
initial_velocity_random = 1.0
angular_velocity = 20.0
angular_velocity_random = 1.0
orbit_velocity = 1.0
orbit_velocity_random = 1.0
linear_accel = 20.0
linear_accel_random = 1.0
radial_accel = 50.0
radial_accel_random = 1.0
tangential_accel = 10.0
tangential_accel_random = 1.0
damping = 50.0
damping_random = 1.0
scale_amount = 0.7
color = Color( 1, 1, 1, 0.501961 )
anim_speed = 128.0

[node name="DownBeam" type="Sprite" parent="Smoothing2D"]
show_behind_parent = true
material = ExtResource( 10 )
rotation = 1.5708
scale = Vector2( 1, 2 )
texture = ExtResource( 9 )
centered = false
offset = Vector2( 0, -5 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 10 )

[node name="End" type="Position2D" parent="Smoothing2D/DownBeam"]

[node name="CPUParticles2D" type="CPUParticles2D" parent="Smoothing2D/DownBeam/End"]
show_behind_parent = true
material = SubResource( 2 )
rotation = 1.57079
amount = 4
lifetime = 0.2
speed_scale = 2.0
randomness = 1.0
lifetime_randomness = 1.0
texture = ExtResource( 11 )
flag_align_y = true
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 15.0
initial_velocity_random = 1.0
angular_velocity = 20.0
angular_velocity_random = 1.0
orbit_velocity = 1.0
orbit_velocity_random = 1.0
linear_accel = 20.0
linear_accel_random = 1.0
radial_accel = 50.0
radial_accel_random = 1.0
tangential_accel = 10.0
tangential_accel_random = 1.0
damping = 50.0
damping_random = 1.0
scale_amount = 0.7
color = Color( 1, 1, 1, 0.501961 )
anim_speed = 128.0
